# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
classes/: CMakeLists.txt  layer.cpp  layer.h  matrix.cpp  matrix.h  neuralNetwork.cpp  neuralNetwork.h  neuron.cpp  neuron.h  utils.cpp  utils.h
config/: predict.json  train.json
data/: test.csv  test_label.csv  train.csv  train100.csv  train100_label.csv  train_label.csv
predict/: CMakeLists.txt  predict.cpp
src/: CMakeLists.txt  main.cpp
